Fix the flickering of the tab drop indicator when dragging a tab over the end of the tabstrip, make the tab drop indicator more visible (Windows and Linux), and simplify the padding at the extremity of the tabstrip (Mac).

--- a/im/themes/winstripe/instantbird/tabbrowser-gnomestripe/tabbrowser.css
+++ b/im/themes/winstripe/instantbird/tabbrowser-gnomestripe/tabbrowser.css
@@ -115,9 +115,12 @@
   position: relative;
   /* set -moz-margin-start to -1/2 indicator width: */
   -moz-margin-start: -5px;
+  -moz-margin-end: -11px;
 }
 
 .tab-drop-indicator {
+  z-index: 1;
+  margin-top: 5px;
   height: 11px;
   width: 11px;
   margin-bottom: -5px;
